# agentic-capstone-proposal

./: .gitignore  CAPSTONE-PROPOSAL-TEMPLATE.md  README.md
submissions/: README.md
submissions/always-wrapped/: proposal.md
submissions/always-wrapped/evidence/: README.md  run-summary.md  test-output.txt
submissions/coResearcher/: .env.example  .gitignore  README.md  proposal.md
submissions/coResearcher/backend/: README.md  pyproject.toml
submissions/coResearcher/backend/app/: __init__.py  config.py  enums.py  llm.py  logging.py  main.py  run_manager.py
submissions/coResearcher/backend/app/agents/: __init__.py  ideator.py  judge.py  literature.py  plan.py
submissions/coResearcher/backend/app/api/: __init__.py  runs.py  schemas.py
submissions/coResearcher/backend/app/db/: __init__.py  checkpointer.py  models.py  repository.py
submissions/coResearcher/backend/app/graph/: __init__.py  graph.py  guards.py  nodes.py  serde.py  state.py
submissions/coResearcher/backend/app/notion/: __init__.py  client.py  render.py
submissions/coResearcher/backend/app/tools/: __init__.py  normalize.py  openalex.py  schemas.py  search.py  semantic_scholar.py
submissions/coResearcher/backend/tests/: conftest.py  test_agents.py  test_api.py  test_config.py  test_db_models.py  test_graph.py  test_guards.py  test_health.py  test_migrations.py  test_notion.py  test_run_manager.py  test_tools.py
submissions/coResearcher/frontend/: .env.example  next.config.ts
submissions/developer-work-companion/: proposal.md
submissions/trailmate/: proposal.md
(+39 files in other folders)
